@@ -1,89 +1,0 @@
-#!/usr/bin/env ruby
-
-# Copyright 2010 Red Hat, Inc.
-#
-# This is free software; you can redistribute it and/or modify it
-# under the terms of the GNU Lesser General Public License as
-# published by the Free Software Foundation; either version 3 of
-# the License, or (at your option) any later version.
-#
-# This software is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU
-# Lesser General Public License for more details.
-#
-# You should have received a copy of the GNU Lesser General Public
-# License along with this software; if not, write to the Free
-# Software Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA
-# 02110-1301 USA, or see the FSF site: http://www.fsf.org.
-
-require 'rubygems'
-require 'boxgrinder-core/helpers/log-helper'
-require 'boxgrinder-build/appliance'
-
-#$stderr.reopen($stdout)
-
-if Process.uid != 0
-  puts "This program must be executed with root privileges. Try 'sudo boxgrinder-build'"
-  abort
-end
-
-require 'commander/import'
-
-module Commander
-  class Runner
-    def run!
-      require_program :version, :description
-      trap('INT') { abort program(:int_message) } if program(:int_message)
-      trap('INT') { program(:int_block).call } if program(:int_block)
-      global_option('-h', '--help', 'Display help documentation') { command(:help).run *@args[1..-1]; return }
-      global_option('-v', '--version', 'Display version information') { say version; return }
-      parse_global_options
-      remove_global_options options, @args
-      run_active_command
-    end
-  end
-end
-
-program :name, 'BoxGrinder Build'
-program :version, '0.8.0'
-program :description, "A tool for building VM images from simple definition files."
-program :help, 'Homepage', 'http://www.jboss.org/boxgrinder/build.html'
-program :help, 'Documentation', 'http://community.jboss.org/docs/DOC-14358'
-program :help, 'Examples', "Run 'boxgrinder-build -h build' for more info about syntax."
-default_command :build
-
-$log_level = :info
-
-global_option('-V', '--verbose', TrueClass, "Prints debug information while building. Default: false.") { $log_level = :debug }
-global_option('-W', '--very-verbose', TrueClass, "Prints trace information while building. Default: false.") { $log_level = :trace }
-
-module BoxGrinder
-  command :build do |c|
-    c.syntax      = 'build appliance_definition.appl [options]'
-    c.description = 'Creates an image from selected appliance definition for selected platform.'
-    c.examples    = "boxgrinder-build test.appl -p vmware\nboxgrinder-build test.appl -p ec2 -d ami\nboxgrinder-build test.appl -d sftp"
-
-    force = false
-
-    c.option '-p STRING', '--platform STRING', String, "The type of platform. Default: none." # Valid types are: #{PlatformPluginManager.instance.plugins.keys.join(', ')}. Default: none."
-    c.option '-d STRING', '--delivery STRING', String, "The delivery type for selected image. Default: none." # Valid types are: #{DeliveryPluginManager.instance.types.keys.join(', ')}. Default: none."
-    c.option('-f', '--force', "Force image creation - removes all previous builds for selected appliance.") { force = true }
-    c.option '-l STRING', '--plugins STRING', String, "Comma separated list of plugins. Default: default plugins will be available."
-
-    c.action do |args, options|
-      options.default :platform => :none
-      options.default :delivery => :none
-
-      options.force     = force
-      options.platform  = options.platform.to_s.downcase.to_sym
-      options.delivery  = options.delivery.to_s.downcase.to_sym
-
-      appliance_definition_file = args.shift or raise("You need to specify appliance definition file. Run 'boxgrinder-build -h' for more info")
-
-      raise "Appliance definition file '#{appliance_definition_file}' could not be found" unless File.exists?(appliance_definition_file)
-
-      Appliance.new(appliance_definition_file, :platform => options.platform, :delivery => options.delivery, :force => options.force, :log => LogHelper.new(:level => $log_level)).create
-    end
-  end
-end
