@@ -1,5 +1,6 @@
 v0.8.0
 
+* [BGBUILD-134] Replace rubygem-commander with rubygem-thor
 * [BGBUILD-131] Check if OS is supported before executing the plugin
 * [BGBUILD-68] Global .boxgrinder/config or rc style file for config
 * [BGBUILD-79] Allow to use BoxGrinder Build as a library
